[gd_scene load_steps=7 format=3 uid="uid://cmigrh2hisohi"]

[ext_resource type="Texture2D" uid="uid://xgsh4x2rwksx" path="res://assets/eye-directions.png" id="1_5qj2l"]
[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_8n28e"]
[ext_resource type="Script" path="res://components/input/input-device-direction.component.gd" id="2_3y83d"]
[ext_resource type="Script" path="res://components/movement/move-character-sprite-animation-rotation.component.gd" id="3_sw3di"]
[ext_resource type="Script" path="res://components/movement/move-character-body-2d.component.gd" id="5_bp5um"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8rssm"]
radius = 8.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_8n28e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8rssm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5qj2l")
hframes = 4
vframes = 2

[node name="InputDeviceDirectionComponent" type="Node" parent="."]
script = ExtResource("2_3y83d")

[node name="MoveCharacterSpriteAnimationRotationComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("3_sw3di")
sprite = NodePath("../Sprite2D")
frame_start_direction = 2

[node name="MoveCharacterBody2DComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_bp5um")
actor = NodePath("..")
speed = 50
